--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
     }</style>`
     document.write(string)
   </script>
-<script type="module" crossorigin src="https://starry29.github.io/big-screen/assets/index.922330f1.js"></script>
-  <link rel="modulepreload" href="https://starry29.github.io/big-screen/assets/vendor.d9ca9ba7.js">
-  <link rel="stylesheet" href="https://starry29.github.io/big-screen/assets/index.77bdb8ec.css">
 </head>
 <body>
 <div id="root"></div>
@@ -26,6 +23,6 @@
   root.style.height = pageHeight + 'px'
   root.style.marginTop = (clientHeight - pageHeight) / 2 + 'px'
 </script>
-
+<script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
