--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport"
-    content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
-  <title>大屏可视化项目</title>
+        content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
+  <title>来宾市农产品数据可视化平台</title>
   <script>
-    const clientWidth = document.documentElement.clientWidth
-    const clientHeight = document.documentElement.clientHeight
+    const {clientWidth} = document.documentElement
+    const {clientHeight} = document.documentElement
     window.pageWidth = clientWidth / clientHeight > 16 / 9 ? clientHeight * (16 / 9) : clientWidth
     const pageHeight = pageWidth / (16 / 9)
-    const string = `<style>html{
-      font-size: ${pageWidth / 100}px
-    }</style>`
-    document.write(string)
+    document.write(`
+      <style>
+        html{
+          font-size: ${pageWidth / 100}px;
+        }
+      </style>
+    `)
   </script>
 </head>
 <body>
 <div id="root"></div>
 <script>
-  // root.style.width = pageWidth + 'px'
+  const root = document.querySelector('#root')
+  root.style.width = pageWidth + 'px'
   root.style.height = pageHeight + 'px'
   root.style.marginTop = (clientHeight - pageHeight) / 2 + 'px'
 </script>
